challenge10/webnodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webnodb
  namespace: abentalebali
  labels:
    app: webnodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webnodb
  template:
    metadata:
      labels:
        app: webnodb
    spec:
      containers:
      - name: webnodb
        image: ahmedbta/flask-app:ch1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "100Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webnodb-service
  namespace: abentalebali
spec:
  type: ClusterIP
  selector:
    app: webnodb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
